--- a/20-ring/index.html
+++ b/20-ring/index.html
@@ -18,16 +18,39 @@
             transform: translate(-50%, -50%);
             text-align: center;
             pointer-events: none;
+            max-width: 45%; /* 限制最大宽度，确保不超出环形图内径 */
+            box-sizing: border-box;
+            padding: 0 8px; /* 添加内边距，防止文字贴边 */
         }
         .center-value {
             font-size: 28px;
             font-weight: 700;
             color: #1D1D1F;
+            line-height: 1.2;
+            white-space: nowrap; /* 防止数字换行 */
         }
         .center-label {
             font-size: 12px;
             color: #86868B;
             margin-top: 4px;
+            line-height: 1.3;
+            word-break: keep-all; /* 保持中文词不拆分 */
+            white-space: normal; /* 允许标签文字换行 */
+            max-width: 100%;
+            overflow-wrap: break-word; /* 必要时允许在单词内换行 */
+        }
+        /* 响应式优化 */
+        @media (max-width: 768px) {
+            .center-content {
+                max-width: 40%; /* 移动端进一步缩小最大宽度 */
+                padding: 0 4px;
+            }
+            .center-value {
+                font-size: 24px;
+            }
+            .center-label {
+                font-size: 11px;
+            }
         }
     </style>
 </head>
